--- a/css/style.scss
+++ b/css/style.scss
@@ -383,43 +383,56 @@ footer{
             height: 3rem;
             flex-wrap: nowrap !important;
             font-family: 'Oswald', sans-serif;
-            .boton__busqueda{
-                height: 100%;
+            .error{
+                margin: auto;
                 margin-left: 0.625rem;
-                border-color: black;
-                background-color: black;
-                color:white;
-                border-radius: .25rem;
-            }
+                height: 100%;
+                .boton__busqueda{
+                    height: 100%;
+                    border-color: black;
+                    background-color: black;
+                    color:white;
+                    border-radius: .25rem;
+                } 
+            }  
         }
     }
 }
-//     #facebook #instagram #twitter{
-//         margin: 20px;
-//         width: 30px;
-//         height: 30px;
-        
-//     }
-    
-//     #instagram{
-//         margin: 20px;
-//         width: 30px;
-//         height: 30px;
-//     }
-//     #twitter{
-//         margin: 20px;
-//         width: 30px;
-//         height: 30px;
-//     }
-//     #whatsapp{
-//         margin: 20px;
-//         width: 30px;
-//         height: 30px;
-//     }
-// }
 
 .formulario{
     margin-top: 3%;
     padding-left: 5%;
     font-family: $tipo;
+}
+
+@media screen and (max-width: 415px){
+    
+    
+    
+    
+    
+    footer{
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        text-align: center;
+        .footloose, .redes{
+            margin-top: 10%;
+            justify-content: center;
+        }
+        .buscador{
+            margin-top: 10%;
+            .error{
+                margin-left: 0.625rem;
+                .boton__busqueda{
+                    margin-top: 0% !important;
+                    height: 100%;
+                    border-color: black;
+                    background-color: black;
+                    color:white;
+                    border-radius: .25rem;
+                } 
+            }
+        }
+    }
 }
