--- a/css/style.css
+++ b/css/style.css
@@ -376,35 +376,6 @@ ol li p, ol li .foto, ol li h3 {
 }
 
 @media screen and (max-width: 415px) {
-  nav {
-    background-color: gray;
-    font-size: 20px;
-    font-family: "Oswald", sans-serif;
-    display: inline-block;
-    z-index: 1;
-    height: 125px;
-  }
-  nav .navl-ink {
-    color: black !important;
-    background-color: rgba(128, 128, 128, 0.8);
-  }
-  nav .nav-link:hover {
-    background-color: black;
-    color: white !important;
-  }
-  nav .dropdown-menu {
-    background-color: unset;
-    border: unset;
-    z-index: 1;
-    background-color: rgba(128, 128, 128, 0.8);
-  }
-  nav .dropdown-item {
-    background-color: rgba(128, 128, 128, 0.8);
-  }
-  nav .dropdown-item:hover {
-    background-color: black !important;
-    color: white !important;
-  }
   .foto {
     width: 100%;
   }
@@ -650,7 +621,7 @@ nav .dropdown-item:hover {
 }
 
 .grid .nota__arsenico {
-  background-image: url(../imagenes/carlos-casares.png);
+  background-image: url(../imagenes/casares-card.png);
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
   background-repeat: no-repeat;
@@ -940,6 +911,43 @@ footer .buscador .barra__busqueda .error .boton__busqueda {
 }
 
 @media screen and (max-width: 415px) {
+  nav .menu {
+    margin-left: 0%;
+  }
+  nav .nav-link {
+    padding-left: 2% !important;
+  }
+  nav .dropdown-menu {
+    padding: 0%;
+    background-color: rgba(128, 128, 128, 0) !important;
+  }
+  nav .dropdown-item {
+    color: black;
+  }
+  .slider__carrusel {
+    width: 100%;
+    height: 50% !important;
+    margin-top: 5%;
+  }
+  .slider__carrusel .notas {
+    height: 100% !important;
+  }
+  .grid {
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+    -ms-grid-rows: (1fr)[6];
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-areas: "nota__toscano" "nota__gardel" "nota__arsenico" "nota__boxeo" "nota__tops" "nota__siria";
+  }
+  .grid .nota__gardel {
+    background-image: url(../imagenes/gardel-card-415.png);
+  }
+  .grid .nota__arsenico {
+    background-image: url(../imagenes/casares-card-415.png);
+  }
+  .grid .nota__tops {
+    background-image: url(../imagenes/cabra-card-415.png);
+  }
   footer {
     display: -webkit-box;
     display: -ms-flexbox;
