--- a/css/style.css
+++ b/css/style.css
@@ -376,8 +376,9 @@ ol li p, ol li .foto, ol li h3 {
 }
 
 @media screen and (max-width: 415px) {
-  .foto {
-    width: 100%;
+  .titulo {
+    margin-left: 10% !important;
+    width: 80% !important;
   }
 }
 
@@ -541,8 +542,8 @@ nav .dropdown-item:hover {
   background-size: cover;
   width: 100%;
   margin: 0 0;
-  border-style: solid;
-  border-color: black;
+  border-style: none;
+  border-radius: 0;
 }
 
 .grid .nota__toscano .card-img-overlay {
@@ -585,8 +586,8 @@ nav .dropdown-item:hover {
   width: 100%;
   height: 100%;
   margin: 0 0;
-  border-style: solid;
-  border-color: black;
+  border-style: none;
+  border-radius: 0;
 }
 
 .grid .nota__gardel .card-img-overlay {
@@ -628,8 +629,8 @@ nav .dropdown-item:hover {
   background-size: cover;
   width: 100%;
   margin: 0 0;
-  border-style: solid;
-  border-color: black;
+  border-style: none;
+  border-radius: 0;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -677,8 +678,8 @@ nav .dropdown-item:hover {
   background-size: cover;
   width: 100%;
   margin: 0 0;
-  border-style: solid;
-  border-color: black;
+  border-style: none;
+  border-radius: 0;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -726,8 +727,8 @@ nav .dropdown-item:hover {
   background-size: cover;
   width: 100%;
   margin: 0 0;
-  border-style: solid;
-  border-color: black;
+  border-style: none;
+  border-radius: 0;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -775,8 +776,8 @@ nav .dropdown-item:hover {
   background-size: cover;
   width: 100%;
   margin: 0 0;
-  border-style: solid;
-  border-color: black;
+  border-style: none;
+  border-radius: 0;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
