--- a/css/style.scss
+++ b/css/style.scss
@@ -119,8 +119,8 @@ nav{
         background-size: cover;
         width: 100%;
         margin: 0 0;
-        border-style: solid;
-        border-color: black;
+        border-style: none;
+        border-radius: 0;
         .card-img-overlay{
             background-color: rgba(255, 255, 255, 0.5);
         }
@@ -153,8 +153,8 @@ nav{
         width: 100%;
         height: 100%;
         margin: 0 0;
-        border-style: solid;
-        border-color: black;
+        border-style: none;
+        border-radius: 0;
         .card-img-overlay{
             background-color: rgba(255, 255, 255, 0.5);
         }
@@ -186,8 +186,8 @@ nav{
         background-size: cover;
         width: 100%;
         margin: 0 0;
-        border-style: solid;
-        border-color: black;
+        border-style: none;
+        border-radius: 0;
         height: 100%;
         object-fit: cover;
         .card-img-overlay{
@@ -224,8 +224,8 @@ nav{
         background-size: cover;
         width: 100%;
         margin: 0 0;
-        border-style: solid;
-        border-color: black;
+        border-style: none;
+        border-radius: 0;
         height: 100%;
         object-fit: cover;
         .card-img-overlay{
@@ -262,8 +262,8 @@ nav{
         background-size: cover;
         width: 100%;
         margin: 0 0;
-        border-style: solid;
-        border-color: black;
+        border-style: none;
+        border-radius: 0;
         height: 100%;
         object-fit: cover;
         .card-img-overlay{
@@ -300,8 +300,8 @@ nav{
         background-size: cover;
         width: 100%;
         margin: 0 0;
-        border-style: solid;
-        border-color: black;
+        border-style: none;
+        border-radius: 0;
         height: 100%;
         object-fit: cover;
         .card-img-overlay{
