--- a/css/style.scss
+++ b/css/style.scss
@@ -55,7 +55,7 @@ nav{
         background-color: unset;
         border: unset;
         z-index: 1;
-        background-color: $color-nav-y-footer;
+        background-color: rgba(128, 128, 128, 0);
     }
     .dropdown-item{
         color: black;
