--- a/css/_sociedad.scss
+++ b/css/_sociedad.scss
@@ -1,11 +1,12 @@
 $widht2: 600px;
+$width3: 650px;
 $height1: 500px;
 $tipo: 'Oswald', sans-serif;
 
 .grid-container{
     margin-top: 5%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(1, 1fr);
     grid-template-areas:  
     "nota__arsenico nota__siria vacio";
@@ -15,11 +16,8 @@ $tipo: 'Oswald', sans-serif;
     &:nth-child(2){
         grid-area: nota__siria;
     }
-    &:nth-child(3){
-        grid-area: vacio;
-    }
     .nota__arsenico{
-        background-image: url(../imagenes/carlos-casares.png);
+        background-image: url(../imagenes/casares-card.png);
         filter: grayscale(100%);
         background-repeat: no-repeat;
         background-size: cover;
@@ -82,6 +80,19 @@ $tipo: 'Oswald', sans-serif;
         .card-img-overlay{
             transition: 0s;
             visibility: hidden;
+        }
+    }
+}
+
+@media screen and (max-width: 415px){
+    .grid-container{
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-template-areas:
+        "nota__arsenico"
+        "nota__siria";
+        .nota__arsenico{
+            background-image: url(../imagenes/casares-card-415.png);
         }
     }
 }
