--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,7 @@ nav .dropdown-item:hover {
 
 .grid .nota__toscano .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 0;
 }
 
 .grid .nota__toscano .card-text {
@@ -600,6 +601,7 @@ nav .dropdown-item:hover {
 
 .grid .nota__gardel .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 0;
 }
 
 .grid .nota__gardel .card-text {
@@ -649,6 +651,7 @@ nav .dropdown-item:hover {
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 0;
 }
 
 .grid .nota__arsenico .card-text {
@@ -698,6 +701,7 @@ nav .dropdown-item:hover {
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 0;
 }
 
 .grid .nota__boxeo .card-text {
@@ -747,6 +751,7 @@ nav .dropdown-item:hover {
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 0;
 }
 
 .grid .nota__tops .card-text {
@@ -796,6 +801,7 @@ nav .dropdown-item:hover {
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 0;
 }
 
 .grid .nota__siria .card-text {
