--- a/css/style.scss
+++ b/css/style.scss
@@ -124,6 +124,7 @@ nav{
         border-radius: 0;
         .card-img-overlay{
             background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 0;
         }
         .card-text{
             text-align: center;
@@ -158,6 +159,7 @@ nav{
         border-radius: 0;
         .card-img-overlay{
             background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 0;
         }
         .card-text{
             text-align: center;
@@ -196,6 +198,7 @@ nav{
             position: relative;
             width: 100%;
             height: 100%;
+            border-radius: 0;
         }
         .card-text{
             text-align: center;
@@ -234,6 +237,7 @@ nav{
             position: relative;
             width: 100%;
             height: 100%;
+            border-radius: 0;
         }
         .card-text{
             text-align: center;
@@ -272,6 +276,7 @@ nav{
             position: relative;
             width: 100%;
             height: 100%;
+            border-radius: 0;
         }
         .card-text{
             text-align: center;
@@ -310,6 +315,7 @@ nav{
             position: relative;
             width: 100%;
             height: 100%;
+            border-radius: 0;
         }
         .card-text{
             text-align: center;
