Modifiqué los links de las secciones

--- a/css/style.scss
+++ b/css/style.scss
@@ -343,6 +343,9 @@ nav{
 .secciones{
     max-width: $widht2;
     margin: 2%;
+    a{
+        text-decoration: none;
+    }
 }
 
 footer{
@@ -416,6 +419,7 @@ footer{
     nav{
         .menu{
             margin-left: 0%;
+            margin-top: 0%;
         }
         .nav-link{
             padding-left: 2% !important;
@@ -423,9 +427,13 @@ footer{
         .dropdown-menu{
             padding: 0%;
             background-color: rgba(128, 128, 128, 0) !important;
+            margin-top: 0px !important;
         }
         .dropdown-item{
             color: black;
+        }
+        #linea-blanca{
+            margin-top: 0% !important;
         }
     }
     .slider__carrusel{
