--- a/css/style.css
+++ b/css/style.css
@@ -4,26 +4,34 @@
           filter: grayscale(100%);
   background-repeat: no-repeat;
   background-size: cover;
+  width: 37.5rem;
+  margin-left: 2%;
   border-style: none;
-  width: 600px;
-  height: 500px;
+  border-radius: 0;
+  height: 31.25rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .nota__gardel .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
 }
 
 .nota__gardel .card-text {
   text-align: center;
   margin-top: 20%;
   color: black;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 .nota__gardel:hover {
   opacity: 1;
-  -webkit-transition: 1s;
-  transition: 1s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
 }
@@ -46,27 +54,34 @@
           filter: grayscale(100%);
   background-repeat: no-repeat;
   background-size: cover;
+  width: 37.5rem;
+  margin-left: 2%;
   border-style: none;
-  width: 600px;
-  height: 500px;
-  margin: 2%;
+  border-radius: 0;
+  height: 31.25rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .nota__boxeo .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
 }
 
 .nota__boxeo .card-text {
   text-align: center;
   margin-top: 20%;
   color: black;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 .nota__boxeo:hover {
   opacity: 1;
-  -webkit-transition: 1s;
-  transition: 1s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
 }
@@ -89,27 +104,34 @@
           filter: grayscale(100%);
   background-repeat: no-repeat;
   background-size: cover;
+  width: 37.5rem;
+  margin-left: 2%;
   border-style: none;
-  width: 600px;
-  height: 500px;
-  margin: 2%;
+  border-radius: 0;
+  height: 31.25rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .nota__toscano .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
 }
 
 .nota__toscano .card-text {
   text-align: center;
   margin-top: 20%;
   color: black;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 .nota__toscano:hover {
   opacity: 1;
-  -webkit-transition: 1s;
-  transition: 1s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
 }
@@ -130,8 +152,8 @@
   margin-top: 5%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (1fr)[1];
       grid-template-rows: repeat(1, 1fr);
       grid-template-areas: "nota__arsenico nota__siria vacio";
@@ -149,33 +171,50 @@
   grid-area: nota__siria;
 }
 
+.grid-container:nth-child(3) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: vacio;
+}
+
+.grid-container a {
+  text-decoration: none;
+}
+
 .grid-container .nota__arsenico {
   background-image: url(../imagenes/casares-card.png);
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
   background-repeat: no-repeat;
   background-size: cover;
+  width: 37.5rem;
+  margin-left: 2%;
   border-style: none;
-  width: 600px;
-  height: 500px;
-  margin: 2%;
+  border-radius: 0;
+  height: 31.25rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .grid-container .nota__arsenico .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
 }
 
 .grid-container .nota__arsenico .card-text {
   text-align: center;
   margin-top: 20%;
   color: black;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 .grid-container .nota__arsenico:hover {
   opacity: 1;
-  -webkit-transition: 1s;
-  transition: 1s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
 }
@@ -198,21 +237,28 @@
           filter: grayscale(100%);
   background-repeat: no-repeat;
   background-size: cover;
+  width: 37.5rem;
+  margin: 0 0;
   border-style: none;
-  width: 600px;
-  height: 500px;
-  margin: 2%;
+  border-radius: 0;
+  height: 31.25rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .grid-container .nota__siria .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
 }
 
 .grid-container .nota__siria .card-text {
   text-align: center;
   margin-top: 20%;
   color: black;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 .grid-container .nota__siria:hover {
@@ -254,27 +300,34 @@
           filter: grayscale(100%);
   background-repeat: no-repeat;
   background-size: cover;
+  width: 37.5rem;
+  margin-left: 2%;
   border-style: none;
-  width: 600px;
-  height: 500px;
-  margin: 2%;
+  border-radius: 0;
+  height: 31.25rem;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .nota__tops .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
 }
 
 .nota__tops .card-text {
   text-align: center;
   margin-top: 20%;
   color: black;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 .nota__tops:hover {
   opacity: 1;
-  -webkit-transition: 1s;
-  transition: 1s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
 }
@@ -836,6 +889,10 @@ nav .dropdown-item:hover {
   margin: 2%;
 }
 
+.secciones a {
+  text-decoration: none;
+}
+
 footer {
   margin-top: 5%;
   display: -ms-grid;
@@ -928,6 +985,7 @@ footer .buscador .barra__busqueda .error .boton__busqueda {
 @media screen and (max-width: 415px) {
   nav .menu {
     margin-left: 0%;
+    margin-top: 0%;
   }
   nav .nav-link {
     padding-left: 2% !important;
@@ -935,9 +993,13 @@ footer .buscador .barra__busqueda .error .boton__busqueda {
   nav .dropdown-menu {
     padding: 0%;
     background-color: rgba(128, 128, 128, 0) !important;
+    margin-top: 0px !important;
   }
   nav .dropdown-item {
     color: black;
+  }
+  nav #linea-blanca {
+    margin-top: 0% !important;
   }
   .slider__carrusel {
     width: 100%;
