Hice responsive de min width 416px a 779px

--- a/css/_notas.scss
+++ b/css/_notas.scss
@@ -70,19 +70,24 @@ main{
         margin-left: 20%;
     }
 }
-ol li{
-    font-family: $tipo;
-    margin-left: 20%;
-    list-style: none;
-    p, .foto, h3{
-        margin-left: 3% !important;
-    }
-}
 
 @media screen and (max-width: 415px){
+    main{
+        .titulo, .foto, .trailer, .video-recuadro, .epigrafe, .creditos, .pregunta, .respuesta, .encabezado, p{
+            margin-left: 10% !important;
+            width: 80% !important;
+        }
 
-    .titulo, .foto, .trailer, .video-recuadro, .epigrafe, .creditos, .pregunta, .respuesta, .encabezado, p{
-        margin-left: 10% !important;
-        width: 80% !important;
+    }
+}
+@media screen and (max-width: 779px){
+    main{
+        .titulo, .foto, .trailer, .video-recuadro, .epigrafe, .creditos, .pregunta, .respuesta, .encabezado, p{
+            margin-left: 5% !important;
+            width: 70% !important;
+        }
+        .respuesta, .epigrafe, .encabezado, .creditos, p{
+            font-size: 1.2rem;
+        }
     }
 }
