--- a/css/style.scss
+++ b/css/style.scss
@@ -352,8 +352,8 @@ footer{
     margin-top: 5%;
     display: grid;
     background-color: gray;
-    height: 150px;
     width: 100%;
+    height: 9.375rem;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(1, 1fr);
     grid-template-areas: 
@@ -432,16 +432,13 @@ footer{
         .dropdown-item{
             color: black;
         }
-        #linea-blanca{
-            margin-top: 0% !important;
-        }
     }
     .slider__carrusel{
         width: 100%;
         height: 50% !important;
         margin-top: 5%; 
         .notas{
-            height: 100% !important;
+            height: 100%;
         }
     }
     .grid{
@@ -474,7 +471,11 @@ footer{
             margin-top: 10%;
             justify-content: center;
         }
+        .redes{
+            transform: translateY(-50%);
+        }
         .buscador{
+            transform: translateY(-50%);
             margin-top: 10%;
             .error{
                 margin-left: 0.625rem;
@@ -515,5 +516,192 @@ footer{
             width: 100%;
             margin: 0px;
         }
+    }
+}
+
+#Consulta{
+    max-width: 21.875rem;
+}
+
+@media screen and (min-width:416px) and (max-width: 779px){
+    nav{
+        .menu{
+            margin-left: 0%;
+            margin-top: 0%;
+        }
+        .nav-link{
+            padding-left: 2% !important;
+        }
+        .dropdown-menu{
+            padding: 0%;
+            background-color: rgba(128, 128, 128, 0) !important;
+            margin-top: 0px !important;
+        }
+        .dropdown-item{
+            color: black;
+        }
+    }
+
+    .slider__carrusel{
+        width: 100%;
+        height: 50% !important;
+        margin-top: 5%; 
+        font-size: 1.25rem;
+        .notas{
+            height: 100%;
+        }
+    }
+
+    .grid{
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        grid-template-areas:
+        "nota__toscano"
+        "nota__gardel"
+        "nota__arsenico"
+        "nota__boxeo"
+        "nota__tops"
+        "nota__siria";
+        .card-text{
+            h1{
+                font-size: 2.5rem;
+            }
+            h2{
+                font-size: 2.5rem;
+            }
+            p{
+                font-size: 1.5rem;
+            }
+        }  
+    }
+
+    .secciones{
+        margin: 5% 0% 0% 0%;  
+        .nota__toscano{
+            width: 100%;
+            margin: 0px;
+            transform: translateX(14%);
+            .card-text{
+                h1{
+                    font-size: 2.5rem;
+                }
+                h2{
+                    font-size: 2.5rem;
+                }
+                p{
+                    font-size: 1.5rem;
+                }
+            }  
+        }
+        .nota__gardel{
+            width: 100%;
+            margin: 0px;
+            transform: translateX(14%);
+            .card-text{
+                h1{
+                    font-size: 2.5rem;
+                }
+                h2{
+                    font-size: 2.5rem;
+                }
+                p{
+                    font-size: 1.5rem;
+                }
+            }  
+        }
+        .nota__arsenico{
+            width: 100%;
+            margin: 0px;
+            .card-text{
+                h1{
+                    font-size: 2.5rem;
+                }
+                h2{
+                    font-size: 2.5rem;
+                }
+                p{
+                    font-size: 1.5rem;
+                }
+            }  
+        }
+        .nota__boxeo{
+            width: 100%;
+            transform: translateX(14%);
+            .card-text{
+                h1{
+                    font-size: 2.5rem;
+                }
+                h2{
+                    font-size: 2.5rem;
+                }
+                p{
+                    font-size: 1.5rem;
+                }
+            }  
+        }
+        .nota__tops{
+            width: 100%;
+            margin: 0px;
+            transform: translateX(14%);
+            .card-text{
+                h1{
+                    font-size: 2.5rem;
+                }
+                h2{
+                    font-size: 2.5rem;
+                }
+                p{
+                    font-size: 1.5rem;
+                }
+            }  
+        }
+        .nota__siria{
+            width: 100%;
+            margin: 0px;
+            .card-text{
+                h1{
+                    font-size: 2.5rem;
+                }
+                h2{
+                    font-size: 2.5rem;
+                }
+                p{
+                    font-size: 1.5rem;
+                }
+            }  
+        }
+    }
+
+    footer{
+        display: flex;
+        flex-direction: column;
+        height: auto;
+        text-align: center;
+        margin-bottom: 0%;
+        .footloose, .redes{
+            margin-top: 10%;
+            justify-content: center;
+        }
+        .redes{
+            transform: translateY(-50%);
+        }
+        .buscador{
+            margin-top: 10%;
+            transform: translateY(-50%);
+            .error{
+                margin-left: 0.625rem;
+                .boton__busqueda{
+                    margin-top: 0% !important;
+                    height: 100%;
+                    border-color: black;
+                    background-color: black;
+                    color:white;
+                    border-radius: .25rem;
+                } 
+            }
+        }
+    }
+    #Consulta{
+        max-width: 700px;
     }
 }
