--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,7 @@
   visibility: hidden;
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 479px) {
   .grid-container {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
@@ -294,7 +294,7 @@
   }
 }
 
-@media screen and (max-width: 779px) {
+@media screen and (min-width: 480px) and (max-width: 779px) {
   .grid-container {
     -ms-grid-columns: (1fr)[1];
         grid-template-columns: repeat(1, 1fr);
@@ -370,7 +370,7 @@ main {
 
 main .titulo {
   font-family: "Oswald", sans-serif;
-  width: 624px;
+  width: 39rem;
   margin-top: 2%;
   margin-left: 20%;
 }
@@ -383,7 +383,7 @@ main .foto {
 
 main .epigrafe {
   font-family: "Oswald", sans-serif;
-  width: 624px;
+  width: 39rem;
   margin-top: 2%;
   margin-left: 20%;
 }
@@ -397,17 +397,17 @@ main .pregunta {
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 1.5rem;
-  width: 624px;
+  width: 39rem;
   margin-left: 20%;
-  line-height: 2em;
+  line-height: 2rem;
 }
 
 main .respuesta {
   font-family: "Oswald", sans-serif;
   font-size: 1rem;
-  width: 624px;
+  width: 39rem;
   margin-left: 20%;
-  line-height: 2em;
+  line-height: 2rem;
 }
 
 main .trailer {
@@ -433,19 +433,19 @@ main .encabezado {
 
 main p {
   font-family: "Oswald", sans-serif;
-  width: 624px;
+  width: 39rem;
   margin-top: 2%;
   margin-left: 20%;
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 479px) {
   main .titulo, main .foto, main .trailer, main .video-recuadro, main .epigrafe, main .creditos, main .pregunta, main .respuesta, main .encabezado, main p {
     margin-left: 10% !important;
     width: 80% !important;
   }
 }
 
-@media screen and (max-width: 779px) {
+@media screen and (min-width: 480px) and (max-width: 779px) {
   main .titulo, main .foto, main .trailer, main .video-recuadro, main .epigrafe, main .creditos, main .pregunta, main .respuesta, main .encabezado, main p {
     margin-left: 5% !important;
     width: 70% !important;
@@ -483,28 +483,28 @@ header {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 500px;
+  height: 31.25rem;
   width: 100%;
 }
 
 header .logo__pagina {
-  height: 500px;
+  height: 31.25rem;
 }
 
 nav {
   background-color: gray;
-  font-size: 20px;
+  font-size: 1.25rem;
   font-family: "Oswald", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   z-index: 10;
-  height: 125px;
+  height: 7.813rem;
   position: -webkit-sticky !important;
   position: sticky !important;
   top: 0;
   border-bottom-style: solid;
-  border-width: 0.5px;
+  border-width: 0.031rem;
 }
 
 nav .nav-link {
@@ -552,8 +552,8 @@ nav .dropdown-item:hover {
 }
 
 .slider__carrusel .notas {
-  width: 550px;
-  height: 500px;
+  width: 34.375;
+  height: 31.25rem;
 }
 
 .grid {
@@ -897,7 +897,7 @@ nav .dropdown-item:hover {
 }
 
 .secciones {
-  max-width: 600px;
+  max-width: 37.5rem;
   margin: 2%;
 }
 
@@ -950,12 +950,12 @@ footer .redes .redes__footer {
 }
 
 footer .redes .red {
-  margin: 20px;
+  margin: 1.25rem;
 }
 
 footer .redes .red .red-social {
-  width: 30px;
-  height: 30px;
+  width: 1.875rem;
+  height: 1.875rem;
 }
 
 footer .buscador {
@@ -994,7 +994,7 @@ footer .buscador .barra__busqueda .error .boton__busqueda {
   font-family: "Oswald", sans-serif;
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 479px) {
   nav .menu {
     margin-left: 0%;
     margin-top: 0%;
@@ -1104,7 +1104,7 @@ footer .buscador .barra__busqueda .error .boton__busqueda {
   max-width: 21.875rem;
 }
 
-@media screen and (min-width: 416px) and (max-width: 779px) {
+@media screen and (min-width: 480px) and (max-width: 779px) {
   nav .menu {
     margin-left: 0%;
     margin-top: 0%;
@@ -1272,7 +1272,7 @@ footer .buscador .barra__busqueda .error .boton__busqueda {
     border-radius: .25rem;
   }
   #Consulta {
-    max-width: 700px;
+    max-width: 43.75rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
